static/style.css
/* dark mode */
body.dark {
  background: #1e1e1e;
  color: rgb(0, 0, 0);
}

body.dark .sidebar {
    background: #2b2b2b;
}

body.dark button {
    background: #444;
    color: rgb(255, 255, 255);
}

body.dark input {
    background: #333;
    color: rgb(0, 0, 0);
}

body{

margin:0;

font-family:Arial;

background:#f5f5f5;

}

h1{

text-align:center;

padding:15px;

margin:0;

background:#1976D2;

color:white;

}

#controls{

padding:15px;

background:white;

}

#map{

height:700px;

width:100%;

}

#legend{
    padding:10px;
    background:white;
}

.dot{
    display:inline-block;
    width:12px;
    height:12px;
    border-radius:50%;
    margin-right:5px;
}

.green{background:green;}
.orange{background:orange;}
.blue{background:dodgerblue;}
.gray{background:gray;}

/* get directions button */

.button-7 {
  background-color: #0095ff;
  border: 1px solid transparent;
  border-radius: 3px;
  box-shadow: rgba(255, 255, 255, .4) 0 1px 0 0 inset;
  box-sizing: border-box;
  color: #fff;
  cursor: pointer;
  display: inline-block;
  font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
  font-size: 13px;
  font-weight: 400;
  line-height: 1.15385;
  margin: 0;
  outline: none;
  padding: 8px .8em;
  position: relative;
  text-align: center;
  text-decoration: none;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: baseline;
  white-space: nowrap;
}

.button-7:hover,
.button-7:focus {
  background-color: #07c;
}

.button-7:focus {
  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
}

.button-7:active {
  background-color: #0064bd;
  box-shadow: none;
}

